tests/baselines/reference/parserEnumDeclaration6.errors.txt
==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration6.ts (1 errors) ====
    enum E {
        A = 1,
        B,
        C = 1 << 1,
        D,
        ~
!!! error TS1061: Enum member must have initializer.
    }